# prediction-football

./: .gitignore  DatasetCreation.py  README.md  WebScraper.py  WebScraperOdds.py  analysis.ipynb  analysis.py  betting_simulator.py  data_preprocessor.py  dataset_creation.py  db_manager.py  main.py  match_data_retrieval.py  models.py  pyproject.toml  requirements.txt  test.csv  test1.csv  test_scrape_players_google_search.py  web_scraper_fifa.py  web_scraper_odds.py
config/: config.py  paths.yaml
src/: betting_simulator.py  main.py
src/data_analysis/: test_scrape_players_google_search.py
src/db/: create_tables.py  db_editor.py  db_manager.py
src/notebooks/: analysis.ipynb  germany_match_data.csv  test.ipynb  test_scrape.ipynb
src/preprocessing/: data_preprocessor.py  dataset_creation.py  match_data_retrieval.py
src/web_scraping/: base_scraper.py  fifa_player_scraper.py  odds_scraper.py  web_scraper_fifa.py  web_scraper_odds.py
