[tool.poetry]
name = "prediction football"
version = "0.1.0"
description = ""
authors = ["David Anders <danders232@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12" 
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fuzzywuzzy = "^0.18.0"
mlflow = "^2.17.2"
python-googlesearch = "^1.1.1"
xgboost = "^2.1.2"
selenium = "^4.26.1"
fake-useragent = "^1.5.1"

[tool.poetry.group.tensorflow.dependencies]
# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "^2.13.0"}
tensorflow-intel = {version = "^2.13.0", platform = "win32"}
tensorflow-cpu = [
    {version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'"},
    {version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'"}
]
tensorflow-cpu-aws = {version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'"}
tensorflow-io-gcs-filesystem = [
    {version = ">=0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'"},
    {version = "<0.32.0", markers = "platform_system == 'Windows'"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
